--- a/MyList.Web/wwwroot/css/site.css
+++ b/MyList.Web/wwwroot/css/site.css
@@ -35,8 +35,8 @@ body {
 }
 .title {
     height: 10vh;
-    font-family: "Parisienne", serif;
-    font-weight: 600;
+    font-family: "Delius Swash Caps", serif;
+    font-weight: 500;
     font-style: normal;
     font-size: 8vh;
     color: white;
